# discord-bot-rust

./: .gitignore  Cargo.toml  README.md
src/: database.db  handler.rs  main.rs
src/commands/: avatar.rs  command.rs  command_manager.rs  info.rs  mod.rs
src/commands/casual/: about.rs  add_emoji.rs  afk.rs  avatar.rs  deadchat.rs  info.rs  mod.rs  nick.rs  poll.rs  remind.rs  remove_reminder.rs  schedule.rs  server_info.rs  suggest.rs  tweet.rs  verify.rs
src/commands/games/: eightball.rs  mod.rs
src/commands/mod_commands/: mod.rs  warn.rs
src/commands/moderation/: add_note.rs  ban.rs  check_ban.rs  flag.rs  flags.rs  history.rs  lock.rs  lockdown.rs  mod.rs  mod_stats.rs  mute.rs  notes.rs  purge.rs  remove_afk.rs  remove_note.rs  remove_review.rs  remove_warning.rs  review.rs  role.rs  slowmode.rs  unban.rs  unflag.rs  unlock.rs  unmute.rs  warn.rs  warnings.rs
src/commands/ticket_commands/: add.rs  claim.rs  close.rs  mod.rs  open.rs
src/commands/tickets/: add.rs  claim.rs  close.rs  mod.rs  open.rs  remove.rs  reset_tickets.rs  ticket_reviews.rs  ticket_selector.rs  ticket_stats.rs  transcribe.py  unclaim.rs
src/databases/: afk.db  config.db  database.rs  mod.rs  mutes.db  warnings.db  wrappers.rs
src/utility/: auto_moder.rs  chat_filter.rs  database.rs  interaction_helper.rs  log_builder.rs  logger.rs  message_manager.rs  mixed.rs  mixed_utility.rs  mod.rs  permission_handler.rs  resolver.rs  threads.rs  ticket_handler.rs  traits.rs  usage_builder.rs  utility_builder.rs
