[package]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

[features]
default = [
  "commands",
]
full = [
  "commands",
  "db_interface",
  "message_logs",
  "auto_moderation",
]
commands = []
message_logs = []
auto_moderation = []
db_interface = []

[dependencies.serenity]
default-features = false
features = ["full"]
version = "0.12.2"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rusqlite = "0.31.0"
anyhow = "1.0.86"
regex = "1.10.5"
nonempty = "0.10.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
strum = "0.26.3"
strum_macros = "0.26.4"
colored = "2.1.0"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
difference = "2.0.0"
