[package]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

[features]
default = [
  "commands",
]
full = [
  "commands",
  "db_interface",
  "message_logs",
  "auto_moderation",
  "tickets",
]
commands = []
message_logs = []
auto_moderation = []
db_interface = []
tickets = []
debug = []

[dependencies.serenity]
default-features = false
features = ["full"]
version = "0.12.2"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rusqlite = "0.34.0"
anyhow = "1.0.97"
regex = "1.11.1"
nonempty = "0.11.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
strum = "0.27.1"
strum_macros = "0.27.1"
colored = "3.0.0"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
difference = "2.0.0"
futures = "0.3.31"
rand = "0.9.0"
cached = { version = "0.55.1", features = ["async"] }
idna = "1.0.3"
ring = "0.17.14"
